fix image aligncenter style

--- a/css/front-style.css
+++ b/css/front-style.css
@@ -71,6 +71,7 @@ aside.widget {
 img.aligncenter, img.alignnone {max-height: 100% !important; width:auto; height:auto; }
 .alignleft { float: left; margin-right: 20px; margin-bottom: 20px; max-width:100%; }
 .alignright{ float: right; margin-left: 20px; margin-bottom: 20px; max-width:100%; }
+img.aligncenter { margin:0 auto; display:block; }
 hr { width: 100%;}
 
 .wp-caption.alignnone, .wp-caption.alignright, .wp-caption.alignleft { background: #f2f2f2; border: 1px solid #ccc;}
